--- a/css/page2.css
+++ b/css/page2.css
@@ -2,3 +2,16 @@ html, body {
     height: 100%;
     width: 100%;
   }
+
+.btn {
+  border: none;
+  background-color: Blue;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+.whlNum {
+    color: green;
+}
