--- a/css/page2.css
+++ b/css/page2.css
@@ -1,13 +1,48 @@
-html, body {
-    height: 100%;
-    width: 100%;
+
+  .container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
   }
 
-button {
+.btn-1 {
+  width: 300px;
+  height: 100px;
   border: none;
+  color: white;
   background-color: Blue;
+  border-radius: 4px;
+  box-shadow: inset 0 0 0 0 #f9e506;
   padding: 14px 28px;
-  font-size: 16px;
-  cursor: pointer;
-  display: inline-block;
+  font-size: 2rem;
+  outline: none;
+}
+
+.btn-2 {
+  width: 300px;
+  height: 100px;
+  border: none;
+  color: white;
+  background-color: Blue;
+  border-radius: 4px;
+  box-shadow: inset 0 0 0 0 #f9e506;
+  padding: 14px 28px;
+  font-size: 2rem;
+  outline: none;
+}
+
+.btn-3 {
+  width: 300px;
+  height: 100px;
+  border: none;
+  color: white;
+  background-color: Blue;
+  border-radius: 4px;
+  box-shadow: inset 0 0 0 0 #f9e506;
+  padding: 14px 28px;
+  font-size: 2rem;
+  outline: none;
 }
