--- a/css/page2.css
+++ b/css/page2.css
@@ -1,48 +1,48 @@
-
-  .container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-    min-height: 100vh;
-  }
+.container{
+  font-family: 'Times New Roman', Times, serif;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  
+}
 
 .btn-1 {
-  width: 300px;
-  height: 100px;
-  border: none;
-  color: white;
-  background-color: Blue;
-  border-radius: 4px;
-  box-shadow: inset 0 0 0 0 #f9e506;
-  padding: 14px 28px;
-  font-size: 2rem;
-  outline: none;
+width: 200px;
+height: 100px;
+border: none;
+color: white;
+background-color: Blue;
+border-radius: 4px;
+box-shadow: inset 0 0 0 0 #f9e506;
+font-size: 2rem;
+outline: none;
+min-height: 10px;
 }
 
 .btn-2 {
-  width: 300px;
-  height: 100px;
-  border: none;
-  color: white;
-  background-color: Blue;
-  border-radius: 4px;
-  box-shadow: inset 0 0 0 0 #f9e506;
-  padding: 14px 28px;
-  font-size: 2rem;
-  outline: none;
+width: 200px;
+height: 100px;
+border: none;
+color: white;
+background-color: pink;
+border-radius: 4px;
+box-shadow: inset 0 0 0 0 #f9e506;
+font-size: 2rem;
+outline: none;
+min-height: 10px;
 }
 
 .btn-3 {
-  width: 300px;
-  height: 100px;
-  border: none;
-  color: white;
-  background-color: Blue;
-  border-radius: 4px;
-  box-shadow: inset 0 0 0 0 #f9e506;
-  padding: 14px 28px;
-  font-size: 2rem;
-  outline: none;
+width: 200px;
+height: 100px;
+border: none;
+color: white;
+background-color: red;
+border-radius: 4px;
+box-shadow: inset 0 0 0 0 #f9e506;
+font-size: 2rem;
+outline: none;
+min-height: 10px;
 }
