--- a/css/page2.css
+++ b/css/page2.css
@@ -5,44 +5,43 @@
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
-  
 }
 
 .btn-1 {
 width: 200px;
 height: 100px;
 border: none;
-color: white;
-background-color: Blue;
+color: #1b84d1;
+background-color: #55f9ef;
 border-radius: 4px;
-box-shadow: inset 0 0 0 0 #f9e506;
 font-size: 2rem;
 outline: none;
 min-height: 10px;
+margin: 20px;
 }
 
 .btn-2 {
 width: 200px;
 height: 100px;
 border: none;
-color: white;
-background-color: pink;
+color: #1b84d1;
+background-color: #55f9ef;
 border-radius: 4px;
-box-shadow: inset 0 0 0 0 #f9e506;
 font-size: 2rem;
 outline: none;
 min-height: 10px;
+margin: 20px;
 }
 
 .btn-3 {
 width: 200px;
 height: 100px;
 border: none;
-color: white;
-background-color: red;
+color: #1b84d1;
+background-color: #55f9ef;
 border-radius: 4px;
-box-shadow: inset 0 0 0 0 #f9e506;
 font-size: 2rem;
 outline: none;
 min-height: 10px;
+margin: 20px;
 }
