--- a/css/index.css
+++ b/css/index.css
@@ -2,33 +2,59 @@ html, body {
   height: 100%;
   width: 100%;
   background:#4785a6;
-  
 }
+
+@font-face {
+  font-family:"Arial Rounded";
+  src: url(ARLRDBD.ttf);
+}
+
 header{
   font-size: 50px;
   border-style: none none solid none;
   border-width: 1px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Arial Rounded";
   color:white;
 }
 
+h2{
+  text-align:center;
+  color:white;
+  font-family: "Arial Rounded";
+}
 
 button {
   display: inline-block;
-  width: 25%;
+  width: 40%;
+  height: 32%;
   border: none;
   color:white;
   padding: 14px 28px;
-  font-size: 100px;
+  font-size: 150px;
   cursor: pointer;
   text-align: center;
   position:relative;
-  left:25%;
-  top:25%;
+  left:10%;
   border-radius: 25px;
   margin:5px;
-
 }
+
 button#addition{
-background:red;
+  background-image: linear-gradient(green, #11ff00, green);
+  box-shadow: 10px 10px 5px #081f03;
+}
+
+#subtraction{
+  background-image: linear-gradient(#c90000, #ff0000, #c90000);
+  box-shadow: 10px 10px 5px #1f0304;
+}
+
+button#multiplication{
+  background-image: linear-gradient(#02a39d, cyan, #02a39d);
+  box-shadow: 10px 10px 5px #032421;
+}
+
+button#division{
+  background-image: linear-gradient(#d9c21a, #ffe100, #d9c21a);
+  box-shadow: 10px 10px 5px #242303;
 }
