--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ button {
   margin:5px;
 }
 
-button#addition{
+#addition{
   background-image: linear-gradient(green, #11ff00, green);
   box-shadow: 10px 10px 5px #081f03;
 }
@@ -58,4 +58,22 @@ button#multiplication{
 button#division{
   background-image: linear-gradient(#d9c21a, #ffe100, #d9c21a);
   box-shadow: 10px 10px 5px #242303;
+}
+
+#addition:hover{
+  background-image: linear-gradient(#043d01, #066901, #043d01);
+  color:#c9c9c9;
+}
+#subtraction:hover{
+  background-image:linear-gradient(#80000b, #bf0010, #80000b);
+  color:#c9c9c9;
+}
+
+#multiplication:hover{
+  background-image:linear-gradient(#006961, #00bfb2, #006961); 
+  color:#c9c9c9;
+}
+#division:hover{
+  background-image:linear-gradient(#666601, #a6a600, #666601); 
+  color:#c9c9c9;
 }
