--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   width: 100%;
-  background:#4785a6;
+  background-image: linear-gradient(#2d7372, #51c4c2, #ffffff);
 }
 
 @font-face {
