--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@ button {
   left:10%;
   border-radius: 25px;
   margin:5px;
+  text-shadow:2px 2px black;
 }
 
 #addition{
@@ -45,34 +46,35 @@ button {
   box-shadow: 10px 10px 5px #081f03;
 }
 
+#addition:hover{
+  background-image: linear-gradient(#043d01, #066901, #043d01);
+  color:#c9c9c9;
+}
 #subtraction{
   background-image: linear-gradient(#c90000, #ff0000, #c90000);
   box-shadow: 10px 10px 5px #1f0304;
 }
 
-button#multiplication{
-  background-image: linear-gradient(#02a39d, cyan, #02a39d);
-  box-shadow: 10px 10px 5px #032421;
-}
-
-button#division{
-  background-image: linear-gradient(#d9c21a, #ffe100, #d9c21a);
-  box-shadow: 10px 10px 5px #242303;
-}
-
-#addition:hover{
-  background-image: linear-gradient(#043d01, #066901, #043d01);
-  color:#c9c9c9;
-}
 #subtraction:hover{
   background-image:linear-gradient(#80000b, #bf0010, #80000b);
   color:#c9c9c9;
+}
+
+#multiplication{
+  background-image: linear-gradient(#02a39d, cyan, #02a39d);
+  box-shadow: 10px 10px 5px #032421;
 }
 
 #multiplication:hover{
   background-image:linear-gradient(#006961, #00bfb2, #006961); 
   color:#c9c9c9;
 }
+
+#division{
+  background-image: linear-gradient(#d9c21a, #ffe100, #d9c21a);
+  box-shadow: 10px 10px 5px #242303;
+}
+
 #division:hover{
   background-image:linear-gradient(#666601, #a6a600, #666601); 
   color:#c9c9c9;
