--- a/page5.css
+++ b/page5.css
@@ -2,7 +2,9 @@ html, body {
   height: 100%;
   width: 100%;
   background-image: linear-gradient(#757575, #cfcfcf);
+  background-attachment: fixed;
 }
+
 
 @font-face {
   font-family:"Arial Rounded";
@@ -19,12 +21,19 @@ header{
 }
 
 p{
-  color:cyan;
+  color:#0f0;
   font-size:150px;
   font-family:"Arial Rounded";
+  position: relative;
+  background:#555;
+  padding:3%;
+  border-radius:25px;
+  width:fit-content;
   text-align:center;
+  left:49.5%;
+  transform: translate(-50%);
+  margin-top:0%;
 }
-
 h2{
   color:white;
   font-family: "Arial Rounded";
@@ -34,21 +43,24 @@ h2{
 
 button {
   display: inline-block;
-  width: 30%;
-  height: 15%;
+  width: 50%;
   border: none;
   color:white;
   padding: 14px 28px;
   font-size: 40px;
   cursor: pointer;
   text-align: center;
-  position:relative;
-  left:35%;
+  position:absolute;
+  left:29.5%;
   border-radius: 25px;
-  margin:5px;
-  background: green;
+  background-image: linear-gradient(#0b0, #090, #0b0);
+  top:85%;
+  margin-left:-5%;
+  margin-right:-5%;
   font-family:"Arial Rounded";
+  box-shadow: 0px 0px 10px 3px white;
 }
+
 button:hover {
   color:darkgray;
   background: #006600;
