--- a/page4.css
+++ b/page4.css
@@ -43,8 +43,7 @@ h2{
 
 button {
   display: inline-block;
-  width: 35%;
-  height: 27%;
+  width: 50%;
   border: none;
   color:white;
   padding: 14px 28px;
@@ -52,10 +51,11 @@ button {
   cursor: pointer;
   text-align: center;
   position:relative;
-  left:32.5%;
+  left:29.5%;
   border-radius: 25px;
-  margin:5px;
-  background: green;
+  background-image: linear-gradient(#0b0, #090, #0b0);
+  margin:-5%;
+  top:-5%;
   font-family:"Arial Rounded";
 }
 button:hover {
